2006-01-03 jerome
* add skins and actions for multi currency

2005-12-28 jerome
* fix i18n on journal report dialog
* move transaction action from erp5_core to here
* bug fix : remove 1000 Limit in  BankAccount_zGetAccountingTransactionList
* added missing script AccountingTransactionModule_getTranslatedPortalTypeItemList

2005-12-21 Kevin
* Add parameter to AccountModule_getAvailableGapList to add an empty item in the generated list.
* Move default_site_preference to erp5_core.

2005-12-18 jérome
* added accounting period module and validation workflow.
* added account validation workflow
* many improvement to reports
* (partially) move to Inventory API
* minor UI clean up

2005-11-13 aurel
* update path definition to include parents objects
* remove workflow rule_interaction_workflow, it is in erp5_core

2005-11-12 Jérome
* Update to use new gap preference and Inventory API instead of  Resource_zGetInventory_old

2005-12-08 yo
* Fix the LEFT JOIN syntax in PaymentTransaction_zSelectMovement and SaleInvoiceTransaction_zSelectMovemen.

2005-12-06 yo
* Remove Resource_zGetInventory_old.
* Fix the LEFT JOIN in Account_zGetAccountingTransactionList.

2005-11-30 yo
* Use portal_preferences.getPreferredAccountingTransactionGap instead of getGap.

2005-10-22 Jérome
* check that [source|destination]_section are Person  or Organisation in accounting_workflow/scripts/validateTransaction to prevent validating accounting transaction with Categories

2005-10-17 Jérome
* remove invoice_edit_workflow from list of installed workflows (not used since a  few commits)

2005-10-16 Jérome
* integrate budget validation in accounting workflow
* remove unnecessary related keys from last change
* fix gap_id related key and add a preferred_gap related key
* get VAT from simulation before printing invoice
* support for portal types and simulation_state translation

2005-10-15 Kevin
* change acquisition setup of financial_section to follow budget module needs