@@ -1,3 +1,6 @@
+2006-01-04 jerome
+* search transaction by creation date.
+
 2006-01-03 jerome
 * add skins and actions for multi currency
 
